# zettelkasten

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  zettelkasten.toml
.github/workflows/: tests.yml
chrome-extension/: manifest.json  popup.html  popup.js
docs/: activation.md  cli.md  enrichment.md  index.md  library.md  monitoring.md  note-schema.md  pipeline.md
docs/design/: architecture-decisions.md  benchmark-innovation.md  design-principles.md  integration-quality-strategy.md  operational-monitoring.md  theory.md  zettelkasten-implementation-plan.md  zettelkasten-memory.md
docs/public/: cli.md  index.md  library.md  monitoring.md  note-schema.md  pipeline.md
eval/: README.md
eval/baseline/: run.py
eval/form-granularity/: README.md  article.md  ground-truth.md  results-run1.md  results.md
eval/ingestion-harness/: ANALYSIS_GUIDE.md  README.md  run.py
eval/integrate-level1/: README.md  run.py
eval/integrate-level2/: README.md  run.py
eval/integrate-level3/: README.md  extract_drafts.py  run.py
eval/retrieval-signals/: README.md  main.py  tune_weights.py
model-tests/: README.md
model-tests/baseline/: run.py
model-tests/edit-split-step15/: run.py
model-tests/form-granularity/: README.md  spike.py
model-tests/ingestion-harness/: .gitignore  README.md  (+3 more)
tests/: test_cli.py  test_enrich.py  test_form.py  test_gather.py  test_inbox.py  test_index.py  test_ingest.py  test_ingestion_harness.py  test_integrate.py  test_note.py  test_note_embedding.py  test_providers.py  test_server.py  test_store.py
(+2322 files in other folders)
